src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Customer Care</fullName>
        <description>Customer Care</description>
        <isActive>true</isActive>
        <values>
            <fullName>Chiuso</fullName>
        </values>
        <values>
            <fullName>In attesa</fullName>
        </values>
        <values>
            <fullName>Nuovo</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Riassegnato</fullName>
        </values>
        <values>
            <fullName>Risposta ricevuta</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Notify Me</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Capo Online</fullName>
        </values>
        <values>
            <fullName>Capo in magazzino</fullName>
        </values>
        <values>
            <fullName>Capo prenotato</fullName>
        </values>
        <values>
            <fullName>Capo spedito%2Fscaricato</fullName>
        </values>
        <values>
            <fullName>Chiuso</fullName>
        </values>
        <values>
            <fullName>Disponibilità Verificata</fullName>
        </values>
        <values>
            <fullName>Inserimento recommendation</fullName>
        </values>
        <values>
            <fullName>Nuovo</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Riparazione</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Aperto</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Chiuso</fullName>
        </values>
        <values>
            <fullName>In Lavorazione</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Ticket E-commerce</fullName>
        <description>Ticket E-commerce</description>
        <isActive>true</isActive>
        <values>
            <fullName>Chiuso</fullName>
        </values>
        <values>
            <fullName>In attesa</fullName>
        </values>
        <values>
            <fullName>Nuovo</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Riassegnato</fullName>
        </values>
        <values>
            <fullName>Risposta ricevuta</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Alert_Dati_Ecommerce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alert Dati E-commerce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area_Customer_Care__c</fullName>
        <formula>CASE(RecordType.DeveloperName, 
&apos;Customer_Care&apos;, &apos;ITA&apos;, 
&apos;Customer_Care_Closed&apos;, &apos;ITA&apos;,
&apos;Customer_Care_US&apos;, &apos;US&apos;,
&apos;Customer_Care_US_Closed&apos;, &apos;US&apos;,
&apos;&apos;)</formula>
        <label>Area Customer Care</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>ATTENZIONE :  La modifica o l&apos;aggiunta di voci di elenco potrebbe avere impatti sulle regole di assegnazione dei casi</description>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commerciale Monomarca</fullName>
                </value>
                <value>
                    <fullName>Commerciale Multimarca</fullName>
                </value>
                <value>
                    <fullName>Gestione VIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assegnato_Da_OmniChannel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assegnato Da OmniChannel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Boutique_DOS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boutique DOS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Canale__c</fullName>
        <label>Canale</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Entry_Point__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>E-commerce</fullName>
                </value>
                <value>
                    <fullName>Monobrand</fullName>
                </value>
                <value>
                    <fullName>Multibrand</fullName>
                </value>
                <value>
                    <fullName>Franchising</fullName>
                </value>
                <value>
                    <fullName>BPS</fullName>
                </value>
                <value>
                    <fullName>Non definito</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cap_Cliente__c</fullName>
        <formula>Account.PersonMailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cap Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Categoria__c</fullName>
        <description>Categoria caso</description>
        <label>Categoria</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Entry_Point__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisti Negozio</fullName>
                </value>
                <value>
                    <fullName>Acquisti E-commerce</fullName>
                </value>
                <value>
                    <fullName>Acquisti Yoox</fullName>
                </value>
                <value>
                    <fullName>Problematiche E-commerce</fullName>
                </value>
                <value>
                    <fullName>Problematiche Segnalate</fullName>
                </value>
                <value>
                    <fullName>Problematiche Yoox</fullName>
                </value>
                <value>
                    <fullName>Cura prodotti</fullName>
                </value>
                <value>
                    <fullName>Feedback del cliente</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Spam</fullName>
                </value>
                <value>
                    <fullName>Comunicazione</fullName>
                </value>
                <value>
                    <fullName>Proposte collaborazione</fullName>
                </value>
                <value>
                    <fullName>Risorse umane</fullName>
                </value>
                <value>
                    <fullName>Richieste amministrazione</fullName>
                </value>
                <value>
                    <fullName>Privacy</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>Catalogues</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Segnalazioni OMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chiuso_Automaticamente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chiuso Automaticamente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Citta__c</fullName>
        <formula>Account.PersonMailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Città</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citta_input__c</fullName>
        <label>Città (input)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cliente_Riparazioni__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Riparazioni</relationshipLabel>
        <relationshipName>Riparazioni</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codice_Autorizzazione_Reso__c</fullName>
        <label>Codice Autorizzazione Reso</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cognome_Cliente__c</fullName>
        <formula>Account.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cognome Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cognome_Cliente_input__c</fullName>
        <label>Cognome Cliente (input)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colore_Prodotto__c</fullName>
        <formula>Prodotto__r.Colore__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Colore Prodotto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colore__c</fullName>
        <label>Colore</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consenso_marketing_BC_group__c</fullName>
        <formula>Account.Privacy2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consenso marketing BC group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consenso_marketing_BC_spa__c</fullName>
        <formula>Account.Privacy1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consenso marketing BC spa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consenso_profilazione__c</fullName>
        <formula>Account.Privacy3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consenso profilazione</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Sat__c</fullName>
        <label>Customer Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non soddisfatto</fullName>
                    <label>🙁 Non soddisfatto</label>
                </value>
                <value>
                    <fullName>Parzialmente soddisfatto</fullName>
                    <label>🙂 Soddisfatto</label>
                </value>
                <value>
                    <fullName>Soddisfatto</fullName>
                    <label>😀 Molto Soddisfatto</label>
                </value>
                <value>
                    <fullName>Neutro</fullName>
                    <label>😐 Indifferente</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Appuntamento__c</fullName>
        <label>Data Appuntamento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Produzione__c</fullName>
        <label>Data Produzione</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Ultima_Mail__c</fullName>
        <label>Data Ultima Mail</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_di_Nascita__c</fullName>
        <formula>Account.PersonBirthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data di Nascita</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_di_Produzione_Confermata__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data di Produzione Confermata</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_prenotazione_capo__c</fullName>
        <label>Data prenotazione capo</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Cliente__c</fullName>
        <formula>Account.PersonEmail</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Cliente_input__c</fullName>
        <label>Email Cliente (input)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entry_Point__c</fullName>
        <label>Entry Point</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Negozio</fullName>
                </value>
                <value>
                    <fullName>Sito E-commerce</fullName>
                </value>
                <value>
                    <fullName>Sito Corporate/Investors</fullName>
                </value>
                <value>
                    <fullName>Spam/Scam</fullName>
                </value>
                <value>
                    <fullName>Proposte collaborazione</fullName>
                </value>
                <value>
                    <fullName>Risorse umane</fullName>
                </value>
                <value>
                    <fullName>Richieste Yoox</fullName>
                </value>
                <value>
                    <fullName>Amministrazione</fullName>
                </value>
                <value>
                    <fullName>OMS</fullName>
                </value>
                <value>
                    <fullName>Contatto Customer Care</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Close_Date__c</fullName>
        <label>First Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_closure_time__c</fullName>
        <formula>IF(FLOOR(( First_Close_Date__c  - CreatedDate ) * 24) &lt;= 23, TEXT( FLOOR(( First_Close_Date__c  - CreatedDate ) * 24)) &amp; &quot; h &quot;,
IF(FLOOR(( First_Close_Date__c  - CreatedDate ) * 24) &gt; 23, TEXT( FLOOR (DATETIMEVALUE(First_Close_Date__c ) - DATETIMEVALUE(CreatedDate))) &amp; &quot; d &quot;,
		 &quot; &quot;))</formula>
        <label>First closure time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_response_date__c</fullName>
        <label>First response date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_response_time__c</fullName>
        <formula>IF(FLOOR(( First_response_date__c - CreatedDate ) * 24) &lt;= 23, TEXT( FLOOR(( First_response_date__c - CreatedDate ) * 24)) &amp; &quot; h &quot;,
IF(FLOOR(( First_response_date__c - CreatedDate ) * 24) &gt; 23, TEXT( FLOOR (DATETIMEVALUE(First_response_date__c) - DATETIMEVALUE(CreatedDate))) &amp; &quot; d &quot;,
		 &quot; &quot;))</formula>
        <label>First response time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Cliente__c</fullName>
        <label>Id Cliente</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Ordine__c</fullName>
        <label>Id Ordine</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Reso__c</fullName>
        <label>Id Reso</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Store__c</fullName>
        <label>Id Store</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_closure_time__c</fullName>
        <formula>IF(FLOOR(( ClosedDate - CreatedDate ) * 24) &lt;= 23, TEXT( FLOOR(( ClosedDate - CreatedDate ) * 24)) &amp; &quot; h &quot;,
IF(FLOOR(( ClosedDate - CreatedDate ) * 24) &gt; 23, TEXT( FLOOR (DATETIMEVALUE(ClosedDate) - DATETIMEVALUE(CreatedDate))) &amp; &quot; d &quot;,
		 &quot; &quot;))</formula>
        <label>Last closure time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linea__c</fullName>
        <label>Linea</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Uomo</fullName>
                </value>
                <value>
                    <fullName>Donna</fullName>
                </value>
                <value>
                    <fullName>Lifestyle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lingua_di_Preferenza__c</fullName>
        <formula>text(Account.Lingua__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lingua di Preferenza</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lingua_di_Preferenza_input__c</fullName>
        <label>Lingua di Preferenza (input)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Casi</relationshipLabel>
        <relationshipName>Casi</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Macro_Categoria_Colore__c</fullName>
        <label>Macro Categoria Colore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Macro_Categoria__c</fullName>
        <label>Macro Categoria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Owner_s_Manager__c</fullName>
        <label>Mail Owner&apos;s Manager</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <formula>IF(OR(OwnerId = Owner:Queue.Id,ISBLANK(Owner:User.ManagerId)),&apos;Giorgia Alunni&apos;,  Owner:User.Manager.FirstName  &amp;  &apos;&apos; &amp; Owner:User.Manager.LastName  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Micro_Categoria_Colore__c</fullName>
        <label>Micro Categoria Colore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Micro_Categoria__c</fullName>
        <label>Micro Categoria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modello_Prodotto__c</fullName>
        <formula>Prodotto__r.Modello__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modello Prodotto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modello__c</fullName>
        <label>Modello</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motivazione_Reso_Cambio__c</fullName>
        <label>Motivazione Reso Cambio</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEG1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NEG1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nazione_Sito__c</fullName>
        <label>Nazione Sito</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nazione__c</fullName>
        <description>Nazione fatturazione del cliente</description>
        <formula>Account.PersonMailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nazione</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nazione_input__c</fullName>
        <label>Nazione (input)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Customer_Email_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Customer Email Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nome_Cliente__c</fullName>
        <formula>Account.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nome Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_Cliente_input__c</fullName>
        <label>Nome Cliente (input)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Dispo_DOS__c</fullName>
        <label>Note Dispo DOS</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note_aggiuntive__c</fullName>
        <label>Note aggiuntive</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notifica_Attiva__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notifica Attiva</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_closures_per_case__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of closures per case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ordine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ordine</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Ticket</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ordine_di_Produzione__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ordine di Produzione</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Origine_Ticket__c</fullName>
        <label>Origine Ticket</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferenza_di_Contatto__c</fullName>
        <formula>TEXT(Account.Preferenza_di_contatto__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preferenza di Contatto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prodotto_Selezionato__c</fullName>
        <label>Prodotto Selezionato</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prodotto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prodotto</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Ticket</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prodotto_non_trovato__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prodotto non trovato</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quantita_Prodotti__c</fullName>
        <label>Quantità Prodotti</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommendations__c</fullName>
        <label>Recommendations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reopen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reopen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reso</label>
        <referenceTo>Transaction_Detail__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Ticket</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsabile_Caso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>utilizzato per i processi notify me 2.0</description>
        <label>Responsabile Caso</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Richiesta_Annullata__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Richiesta Annullata</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Riga_Ordine_Stock__c</fullName>
        <label>Riga Ordine Stock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sesso__c</fullName>
        <formula>text(Account.Sesso__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sesso</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sesso_input__c</fullName>
        <label>Sesso (input)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sottoarea__c</fullName>
        <description>ATTENZIONE :  La modifica o l&apos;aggiunta di voci di elenco potrebbe avere impatti sulle regole di assegnazione dei casi</description>
        <label>Sottoarea</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Area__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Europa</fullName>
                </value>
                <value>
                    <fullName>Italia</fullName>
                </value>
                <value>
                    <fullName>Far East</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sottocategoria__c</fullName>
        <label>Sottocategoria</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Categoria__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Acquisti</fullName>
                </value>
                <value>
                    <fullName>Acquisti potenziali</fullName>
                </value>
                <value>
                    <fullName>Altro</fullName>
                </value>
                <value>
                    <fullName>Amministrazione</fullName>
                </value>
                <value>
                    <fullName>Assistenza generica prodotto</fullName>
                </value>
                <value>
                    <fullName>Cambi e resi</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t find my size</fullName>
                </value>
                <value>
                    <fullName>Cancellazione Ordini</fullName>
                </value>
                <value>
                    <fullName>Comunicazione</fullName>
                </value>
                <value>
                    <fullName>Boutique</fullName>
                    <label>Contatta Boutique</label>
                </value>
                <value>
                    <fullName>Crosschannel</fullName>
                </value>
                <value>
                    <fullName>Customer Feedback</fullName>
                </value>
                <value>
                    <fullName>Dati di login</fullName>
                </value>
                <value>
                    <fullName>Digital &amp; ICT</fullName>
                </value>
                <value>
                    <fullName>Disponibilità in negozio</fullName>
                </value>
                <value>
                    <fullName>Feedback negativi</fullName>
                </value>
                <value>
                    <fullName>Feedback positivi</fullName>
                </value>
                <value>
                    <fullName>Finanza</fullName>
                </value>
                <value>
                    <fullName>Frodi</fullName>
                </value>
                <value>
                    <fullName>Info Generiche</fullName>
                </value>
                <value>
                    <fullName>Informazioni su care</fullName>
                </value>
                <value>
                    <fullName>Informazioni su composizione</fullName>
                </value>
                <value>
                    <fullName>Informazioni su ordini acquistati</fullName>
                </value>
                <value>
                    <fullName>Informazioni su pagamento</fullName>
                </value>
                <value>
                    <fullName>Informazioni su policy di acquisto</fullName>
                </value>
                <value>
                    <fullName>Invio candidatura</fullName>
                </value>
                <value>
                    <fullName>Invio Cataloghi</fullName>
                </value>
                <value>
                    <fullName>Invitation</fullName>
                </value>
                <value>
                    <fullName>Legale</fullName>
                </value>
                <value>
                    <fullName>Logistica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stagione_Prodotto__c</fullName>
        <formula>Prodotto__r.Stagione__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stagione Prodotto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stagione__c</fullName>
        <label>Stagione</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PE11</fullName>
                </value>
                <value>
                    <fullName>AI11</fullName>
                </value>
                <value>
                    <fullName>PE12</fullName>
                </value>
                <value>
                    <fullName>AI12</fullName>
                </value>
                <value>
                    <fullName>PE13</fullName>
                </value>
                <value>
                    <fullName>AI13</fullName>
                </value>
                <value>
                    <fullName>PE14</fullName>
                </value>
                <value>
                    <fullName>AI14</fullName>
                </value>
                <value>
                    <fullName>PE15</fullName>
                </value>
                <value>
                    <fullName>AI15</fullName>
                </value>
                <value>
                    <fullName>PE16</fullName>
                </value>
                <value>
                    <fullName>AI16</fullName>
                </value>
                <value>
                    <fullName>PE17</fullName>
                </value>
                <value>
                    <fullName>AI17</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stato_Provincia_Cliente__c</fullName>
        <formula>Account.PersonMailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stato/Provincia Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_New_First_Shadow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status New First Shadow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Reassigned_First_Shadow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Reassigned First Shadow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Reply_Received_First_Shadow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Reply Received First Shadow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store</label>
        <referenceTo>Store_di_riferimento__c</referenceTo>
        <relationshipLabel>Casi</relationshipLabel>
        <relationshipName>Casi</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Taglia_Prodotto__c</fullName>
        <formula>Prodotto__r.Taglia_DW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taglia Prodotto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taglia__c</fullName>
        <label>Taglia</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taglia_non_presente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taglia non presente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Telefono__c</fullName>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Telefono</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono_input__c</fullName>
        <label>Telefono (input)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tipologia__c</fullName>
        <label>Tipologia</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Titolare_Boutique__c</fullName>
        <formula>IF (Location__r.Id_Location_Micros__c =  $User.Codice_Boutique__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Titolare Boutique</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Titolare_Caso_c__c</fullName>
        <formula>IF( (isblank(Owner:User.LastName)), Owner:Queue.QueueName, Owner:User.FirstName &amp;&quot; &quot;&amp; Owner:User.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Titolare Caso</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Titolo_Cliente__c</fullName>
        <formula>text(Account.Salutation)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Titolo Cliente</label>
        <type>Text</type>
    </fields>
</CustomObject>